--- a/power/src/app/fragebogen/surveyjs/preview/preview.component.html
+++ b/power/src/app/fragebogen/surveyjs/preview/preview.component.html
@@ -1,4 +1,7 @@
 <div class="fullscreen bg-white"
+     tabindex="-1"
+     role="dialog"
+     aria-modal="true"
      *ngIf="isOpen">
     <div class="container p-1 p-lg-3">
         <button type="button"
