--- a/power/src/app/shared/loadingscreen/loadingscreen.component.html
+++ b/power/src/app/shared/loadingscreen/loadingscreen.component.html
@@ -1,4 +1,7 @@
 <div id="loadingscreen"
+     tabindex="-1"
+     role="dialog"
+     aria-modal="true"
      *ngIf="loadingscreen.visible">
     <div class="row h-100 m-0">
         <div class="col-sm-12 my-auto text-center">
