--- a/power/src/app/fragebogen/details/publish/publish.component.html
+++ b/power/src/app/fragebogen/details/publish/publish.component.html
@@ -3,7 +3,7 @@
      class="modal fade"
      tabindex="-1"
      role="dialog"
-     aria-hidden="true">
+     aria-modal="true">
     <div class="modal-dialog"
          role="document">
         <div class="modal-content">
