Compressed images lossless

--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -4,8 +4,9 @@
            [routerLink]="['/']"
            style="color: #343a40;">
             <img src="/assets/logos/logo.png"
-                 height="20"
                  class="mr-2 align-top"
+                 aria-hidden="true"
+                 height="25px"
                  i18n-alt
                  alt="LGLN Logo">
             <strong class="d-none d-md-inline">
