--- a/power/src/app/fragebogen/dashboard/dashboard.component.html
+++ b/power/src/app/fragebogen/dashboard/dashboard.component.html
@@ -2,6 +2,74 @@
 <main class="mainpage p-1 p-lg-3"
       id="content"
       tabindex="-1">
+    <!-- tasks list -->
+    <div class="card bg-light mb-1 mb-lg-3">
+        <div class="card-header h5">
+            <svg width="1em"
+                 height="1em"
+                 viewBox="0 0 16 16"
+                 class="bi bi-list-ul"
+                 fill="currentColor"
+                 xmlns="http://www.w3.org/2000/svg"
+                 aria-hidden="true">
+                <path fill-rule="evenodd"
+                      d="M5 11.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm-3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm0 4a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm0 4a1 1 0 1 0 0-2 1 1 0 0 0 0 2z" />
+            </svg>
+            <span i18n>&nbsp;Antworten</span>
+        </div>
+
+        <div class="card-body table-responsive p-0">
+            <table class="table table-hover m-0">
+                <thead>
+                    <tr>
+                        <th scope="col"
+                            class="border-top-0"
+                            i18n>ID</th>
+                        <th scope="col"
+                            class="border-top-0"
+                            i18n>Formular</th>
+                        <th scope="col"
+                            class="border-top-0"
+                            i18n>Status</th>
+                        <th scope="col"
+                            class="border-top-0"
+                            i18n>Kommentar</th>
+                        <th scope="col"
+                            class="border-top-0"
+                            i18n>Zuletzt bearbeitet</th>
+                        <th scope="col"
+                            class="border-top-0"
+                            i18n>Erstellt</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let task of storage.tasksList; index as i">
+                        <td>{{ task.id }}</td>
+                        <td>
+                            <a i18n-title
+                               title="Formular öffnen"
+                               [routerLink]="['/forms/details', task['form-id']]"
+                               i18n>
+                                Formular öffnen
+                            </a>
+                        </td>
+                        <td>{task.status, select, created {Erstellt} accessed {In bearbeitung} submitted
+                            {Abgeschlossen}}</td>
+                        <td>
+                            {{ task.description }}
+                        </td>
+                        <td *ngIf="task.status !== 'submitted'">{{ task.accessed | date:'short' }}</td>
+                        <td *ngIf="task.status === 'submitted'">{{ task.submitted | date:'short' }}</td>
+                        <td>{{ task.created | date:'short' }}</td>
+                    </tr>
+                </tbody>
+            </table>
+            <span class="m-3"
+                  *ngIf="!storage.tasksList.length"
+                  i18n>Keine Antworten vorhanden</span>
+        </div>
+    </div>
+
     <!-- forms list -->
     <div class="card bg-light">
         <div class="card-header h5">
@@ -20,6 +88,7 @@
             </svg>
             <span i18n>&nbsp;Formulare</span>
         </div>
+
         <div class="card-body table-responsive p-0">
             <table class="table table-hover m-0">
                 <thead>
@@ -77,7 +146,8 @@
                                     <path fill-rule="evenodd"
                                           d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5a.5.5 0 0 0-1 0v7a.5.5 0 0 0 1 0v-7z" />
                                 </svg>
-                                <span class="d-none d-sm-inline" i18n>&nbsp;Löschen</span>
+                                <span class="d-none d-sm-inline"
+                                      i18n>&nbsp;Löschen</span>
                             </button>
                         </td>
                     </tr>
@@ -87,6 +157,7 @@
                   *ngIf="!storage.formsList.length"
                   i18n>Keine Formulare gefunden</span>
         </div>
+
         <div class="card-footer">
             <button type="button"
                     class="btn btn-success btn-sm mr-2"
@@ -105,7 +176,8 @@
                     <path fill-rule="evenodd"
                           d="M7.5 8a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1H8.5V12a.5.5 0 0 1-1 0V8z" />
                 </svg>
-                <span class="d-none d-sm-inline" i18n>&nbsp;Neues Formular</span>
+                <span class="d-none d-sm-inline"
+                      i18n>&nbsp;Neues Formular</span>
             </button>
         </div>
     </div>
