--- a/power/src/app/fragebogen/editor/editor.component.html
+++ b/power/src/app/fragebogen/editor/editor.component.html
@@ -262,7 +262,7 @@
                         class="btn btn-secondary mr-2"
                         i18n-title
                         title="Formular Vorschau öffnen"
-                        (click)="preview.Open()">
+                        (click)="preview.open()">
                     <svg width="1em"
                          height="1em"
                          viewBox="0 0 16 16"
