Fix default value not set correct

--- a/power/src/app/fragebogen/editor/formular-settings/formular-settings.component.html
+++ b/power/src/app/fragebogen/editor/formular-settings/formular-settings.component.html
@@ -85,7 +85,7 @@
                                 [(ngModel)]="storage.model.showQuestionNumbers"
                                 id="form-showQuestionNumbers"
                                 name="form-showQuestionNumbers">
-                            <option value=""
+                            <option value="on"
                                     i18n>Durchgängig nummerieren</option>
                             <option value="onpage"
                                     i18n>Seitenweise nummerieren</option>
