--- a/power/src/app/fragebogen/fragebogen.scss
+++ b/power/src/app/fragebogen/fragebogen.scss
@@ -77,6 +77,10 @@ td {
     margin-right: 10px !important;
 }
 
+.noUi-connect {
+    width: initial !important;
+}
+
 .smooth-dnd-container {
     height: 100% !important;
     min-height: 100% !important;
