--- a/power/src/app/fragebogen/surveyjs/preview/preview.component.html
+++ b/power/src/app/fragebogen/surveyjs/preview/preview.component.html
@@ -2,10 +2,76 @@
              (onClose)="close()">
     <div class="container px-1 px-lg-3"
          *ngIf="isVisible">
-        <power-forms-surveyjs-wrapper [model]="form"
+        <form #previewForm="ngForm"
+              i18n-aria-label
+              aria-label="Einstellungen für die Vorschau"
+              *ngIf="!data"
+              onsubmit="return false;">
+            <div class="form-row">
+                <!-- display mode -->
+                <div class="col-12 col-lg-4">
+                    <div class="form-group">
+                        <label for="mode"
+                               i18n>Anzeigemodus</label>
+                        <select class="custom-select"
+                                [(ngModel)]="mode"
+                                id="mode"
+                                name="mode">
+                            <option value="edit"
+                                    i18n>Editiermodus</option>
+                            <option value="display"
+                                    i18n>Vorschaumodus</option>
+                        </select>
+                    </div>
+                </div>
+
+                <!-- language -->
+                <div class="col-12 col-lg-4">
+                    <div class="form-group">
+                        <label for="language"
+                               i18n>Sprache</label>
+                        <select class="custom-select"
+                                [(ngModel)]="language"
+                                (change)="setLanguage()"
+                                id="language"
+                                name="language">
+                            <option *ngFor="let lang of wrapper.survey.getUsedLocales(); index as i"
+                                    [ngValue]="lang">
+                                {{ lang }}
+                            </option>
+                        </select>
+                    </div>
+                </div>
+
+                <!-- show invisible -->
+                <div class="col-12 col-lg-4">
+                    <div class="custom-control custom-checkbox mb-3">
+                        <input type="checkbox"
+                               class="custom-control-input"
+                               [(ngModel)]="showInvisible"
+                               name="showInvisible"
+                               id="showInvisible">
+                        <label class="custom-control-label"
+                               for="showInvisible"
+                               i18n>Unsichtbare Elemente anzeigen</label>
+                    </div>
+                </div>
+
+                <button type="submit"
+                        class="d-none"
+                        aria-hidden="true"
+                        disabled
+                        i18n>Absenden</button>
+            </div>
+        </form>
+
+        <!-- preview -->
+        <power-forms-surveyjs-wrapper #wrapper
+                                      [model]="form"
                                       [css]="surveyjs_style"
                                       [mode]="mode"
                                       [data]="data"
+                                      [showInvisible]="showInvisible"
                                       (submitResult)="debugPrint($event)">
         </power-forms-surveyjs-wrapper>
     </div>
