--- a/power/src/app/immobilien/immobilien/immobilien.component.html
+++ b/power/src/app/immobilien/immobilien/immobilien.component.html
@@ -16,9 +16,8 @@
 
             <ngb-panel *ngFor="let select of nipixStatic.data.selections; let p = index" id="static-{{p}}">
                 <ng-template ngbPanelTitle>
-                    <i class="fa"
-                       [ngClass]="{'fa-plus-circle': staticExpand(p) == false, 'fa-minus-circle': staticExpand(p) == true}"
-                       aria-hidden="true"></i>
+                    <i-bs name="plus-circle" *ngIf="staticExpand(p) == false" aria-hidden="true"></i-bs>
+                    <i-bs name="dash-circle" *ngIf="staticExpand(p) == true" aria-hidden="true"></i-bs>
                     {{select['name']}}
                 </ng-template>
                 <ng-template ngbPanelContent>
@@ -27,15 +26,27 @@
                     <div ngbDropdown *ngIf="select['type'] == 'single' || select['type'] == 'multiIndex'"
                          class="d-inline-block btn-block ">
                         <button class="btn btn-block shadow-sm bg-white" id="dropdownBasic2-{{p}}" type="button" ngbDropdownToggle>
-                            <i class="fa"
-                               [ngClass]="iconFor[nipixRuntime.getDrawPreset(select['preset'][0]).nipixCategory]"
-                               aria-hidden="true"></i>
+                            <i-bs name="house-fill"
+                                  *ngIf="nipixRuntime.getDrawPreset(select['preset'][0]).nipixCategory == 'gebrauchte Eigenheime'"
+                                  aria-hidden="true">
+                            </i-bs>
+                            <i-bs name="building"
+                                  *ngIf="nipixRuntime.getDrawPreset(select['preset'][0]).nipixCategory == 'gebrauchte Eigentumswohnungen'"
+                                  aria-hidden="true">
+                            </i-bs>
                             {{nipixRuntime.getDrawPreset(select['preset'][0]).nipixCategory}}
                         </button>
                         <div ngbDropdownMenu aria-labelledby="dropdownBasic2-p" class="dropdown-menu">
                             <button type="button" class="dropdown-item" *ngFor="let f of nipixRuntime.availableNipixCategories"
                                     (click)="onChangeCat(select['preset'], f)">
-                                <i class="fa" [ngClass]="iconFor[f]" aria-hidden="true"></i>
+                                <i-bs name="house-fill"
+                                      *ngIf="f == 'gebrauchte Eigenheime'"
+                                      aria-hidden="true">
+                                </i-bs>
+                                <i-bs name="building"
+                                      *ngIf="f == 'gebrauchte Eigentumswohnungen'"
+                                      aria-hidden="true">
+                                </i-bs>
                                 {{f}}
                             </button>
                         </div>
@@ -75,7 +86,15 @@
                                 </ng-container>
 
                                 <span>
-                                    <i class="fa" [ngClass]="iconFor[f]" aria-hidden="true"></i> {{f}}
+                                    <i-bs name="house-fill"
+                                          *ngIf="f == 'gebrauchte Eigenheime'"
+                                          aria-hidden="true">
+                                    </i-bs>
+                                    <i-bs name="building"
+                                          *ngIf="f == 'gebrauchte Eigentumswohnungen'"
+                                          aria-hidden="true">
+                                    </i-bs>
+                                    {{f}}
                                 </span>
                             </li>
                         </ng-container>
@@ -139,10 +158,8 @@
                                     style="display: inline-block; margin-right: 5px; border-radius: 10px; width: 10px; height: 10px;"
                                     [style.background-color]="nipixRuntime.getDrawPreset(itm).colors"></span>
                                 {{ itm }}
-                                <i class="fa fa-home" [ngClass]="fa-home" aria-hidden="true"
-                                   *ngIf="itm == 'Eigenheime'"></i>
-                                <i class="fa fa-building" [ngClass]="fa-home" aria-hidden="true"
-                                   *ngIf="itm == 'Eigentumswohnungen'"></i>
+                                <i-bs name="house-fill" *ngIf="itm == 'Eigenheime'" aria-hidden="true"></i-bs>
+                                <i-bs name="building" *ngIf="itm == 'Eigentumswohnungen'" aria-hidden="true"></i-bs>
                                 ({{ nipixStatic.data.shortNames[itm] }})</span>
                         </li>
                     </ul>
@@ -153,9 +170,8 @@
             <!-- Find Woma-Region -->
             <ngb-panel id="static-99">
                 <ng-template ngbPanelTitle>
-                    <i class="fa"
-                       [ngClass]="{'fa-plus-circle': accordionComponent.isExpanded('static-99') == false, 'fa-minus-circle': accordionComponent.isExpanded('static-99') == true}"
-                       aria-hidden="true"></i>
+                    <i-bs name="plus-circle" *ngIf="staticExpand(99) == false" aria-hidden="true"></i-bs>
+                    <i-bs name="dash-circle" *ngIf="staticExpand(99) == true" aria-hidden="true"></i-bs>
                     Zu welcher Wohnungsmarktregion gehört meine Gemeinde?
                 </ng-template>
                 <ng-template ngbPanelContent>
