--- a/power/src/app/fragebogen/dashboard/newform/newform.component.html
+++ b/power/src/app/fragebogen/dashboard/newform/newform.component.html
@@ -97,38 +97,8 @@
                     </div>
 
                     <!-- tags -->
-                    <div class="form-group mb-0">
-                        <label for="formtag"
-                               i18n>Formular mit Tags markieren</label>
-                        <input type="text"
-                               list="tags"
-                               class="form-control"
-                               [(ngModel)]="tagInput"
-                               (keyup.enter)="addTag()"
-                               (change)="addTag()"
-                               id="formtag"
-                               name="formtag"
-                               maxlength="50"
-                               i18n-placeholder
-                               placeholder="Tag mit ENTER bestätigen"
-                               required>
-                        <datalist id="tags">
-                            <option *ngFor="let tag of storage.tagList; index as i"
-                                    value="{{ tag }}"></option>
-                        </datalist>
-                        <div>
-                            <span class="badge badge-pill badge-primary clickable mr-1"
-                                  *ngFor="let tag of tagList; index as i"
-                                  i18n-title
-                                  title="Löschen"
-                                  role="button"
-                                  tabindex="0"
-                                  (click)="removeTag(i)"
-                                  (keyup.enter)="removeTag(i)">
-                                {{ tag }}
-                            </span>
-                        </div>
-                    </div>
+                    <power-tagbox [(tagList)]="tagList"
+                                  [dataList]="storage.tagList"></power-tagbox>
 
                     <button type="submit"
                             class="d-none"
