--- a/power/src/app/fragebogen/details/maketask/maketask.component.html
+++ b/power/src/app/fragebogen/details/maketask/maketask.component.html
@@ -43,7 +43,8 @@
                       i18n-aria-label
                       aria-label="Angabe wie viele PINs erstellt werden"
                       onsubmit="return false;">
-                    <div class="form-group row mb-0">
+                    <!-- amount -->
+                    <div class="form-group row">
                         <label for="inputAmount"
                                class="col-sm-4 col-form-label"
                                i18n>Anzahl PINs</label>
@@ -56,6 +57,18 @@
                                    name="inputAmount"
                                    [(ngModel)]="amount">
                         </div>
+                    </div>
+
+                    <!-- copy -->
+                    <div class="custom-control custom-checkbox">
+                        <input type="checkbox"
+                               class="custom-control-input"
+                               [(ngModel)]="copy"
+                               name="copy"
+                               id="copy">
+                        <label class="custom-control-label"
+                               for="copy"
+                               i18n>Kopiere PIN(s) in die Zwischenablage</label>
                     </div>
 
                     <button type="submit"
