Fix tslint error

--- a/power/src/app/fragebogen/editor/formular-settings/formular-settings.component.html
+++ b/power/src/app/fragebogen/editor/formular-settings/formular-settings.component.html
@@ -1,5 +1,5 @@
 <power-modal #formsettingsmodal
-             (onClose)="close()">
+             (closing)="close()">
     <div class="container px-1 px-lg-3">
         <accordion [isAnimated]="true"
                    [closeOthers]="true">
