--- a/power/src/app/fragebogen/editor/question-settings/question-settings.component.html
+++ b/power/src/app/fragebogen/editor/question-settings/question-settings.component.html
@@ -1,5 +1,5 @@
 <power-modal #questionsettingsmodal
-             (onClose)="close()">
+             (closing)="close()">
     <div class="container px-1 px-lg-3"
          *ngIf="question !== null">
         <accordion [isAnimated]="true"
