--- a/power/src/app/fragebogen/surveyjs/preview/preview.component.html
+++ b/power/src/app/fragebogen/surveyjs/preview/preview.component.html
@@ -1,5 +1,5 @@
 <power-modal #previewmodal
-             (onClose)="close()">
+             (closing)="close()">
     <div class="container px-1 px-lg-3"
          *ngIf="isVisible">
         <form #previewForm="ngForm"
