Extended dashboard tests

--- a/power/src/app/fragebogen/dashboard/dashboard.component.html
+++ b/power/src/app/fragebogen/dashboard/dashboard.component.html
@@ -75,7 +75,7 @@
                 <pagination [boundaryLinks]="true"
                             [itemsPerPage]="storage.tasksPerPage"
                             [maxSize]="10"
-                            [totalItems]="storage.tasksCount"
+                            [totalItems]="storage.tasksCountTotal"
                             (pageChanged)="tasksPageChanged($event)"
                             previousText="&lsaquo;"
                             nextText="&rsaquo;"
@@ -201,7 +201,7 @@
                 <pagination [boundaryLinks]="true"
                             [itemsPerPage]="storage.formsPerPage"
                             [maxSize]="10"
-                            [totalItems]="storage.formsCount"
+                            [totalItems]="storage.formsCountTotal"
                             (pageChanged)="formsPageChanged($event)"
                             previousText="&lsaquo;"
                             nextText="&rsaquo;"
